--- a/whg/templates/django-pv-pvc.yaml
+++ b/whg/templates/django-pv-pvc.yaml
@@ -10,18 +10,11 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: "django-app-storage"
+  storageClassName: django-app-storage
   hostPath:
     path: {{ .Values.django.pv.app.path }}
   nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: role
-          operator: In
-          values:
-          - all
-          - general
+    required: {{ toYaml .Values.whgAffinity.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution | nindent 6 }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -35,7 +28,7 @@ spec:
     requests:
       storage: {{ .Values.django.pv.app.storage }}
   volumeName: django-app-pv  # Reference the PV
-  storageClassName: "django-app-storage"
+  storageClassName: django-app-storage
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -49,18 +42,11 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: "django-static-storage"
+  storageClassName: django-static-storage
   hostPath:
     path: {{ .Values.django.pv.static.path }}
   nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: role
-          operator: In
-          values:
-          - all
-          - general
+    required: {{ toYaml .Values.whgAffinity.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution | nindent 6 }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -74,7 +60,7 @@ spec:
     requests:
       storage: {{ .Values.django.pv.static.storage }}
   volumeName: django-static-pv  # Reference the PV
-  storageClassName: "django-static-storage"
+  storageClassName: django-static-storage
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -88,10 +74,11 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: "django-media-storage"
+  storageClassName: django-media-storage
   hostPath:
     path: {{ .Values.django.pv.media.path }}
-  nodeAffinity: {{ toYaml .Values.whgNodeAffinity | indent 4 }}
+  nodeAffinity:
+    required: {{ toYaml .Values.whgAffinity.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution | nindent 6 }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -105,4 +92,4 @@ spec:
     requests:
       storage: {{ .Values.django.pv.media.storage }}
   volumeName: django-media-pv  # Reference the PV
-  storageClassName: "django-media-storage"
+  storageClassName: django-media-storage
