--- a/whg/templates/redis-pv-pvc.yaml
+++ b/whg/templates/redis-pv-pvc.yaml
@@ -20,7 +20,8 @@ spec:
   storageClassName: redis-storage
   hostPath:
     path: {{ .Values.redis.pv.path }}
-  nodeAffinity: {{- toYaml .Values.whgNodeAffinity | nindent 4 }}
+  nodeAffinity:
+    required: {{ toYaml .Values.whgAffinity.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution | nindent 6 }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
