--- a/whg/templates/webpack-pv-pvc.yaml
+++ b/whg/templates/webpack-pv-pvc.yaml
@@ -17,10 +17,11 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: "webpack-build-storage"
+  storageClassName: webpack-build-storage
   hostPath:
     path: {{ .Values.webpack.pv.path }}
-  nodeAffinity: {{- toYaml .Values.whgDevAffinity | nindent 4 }}
+  nodeAffinity:
+    required: {{ toYaml .Values.whgAffinity.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution | nindent 6 }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -33,4 +34,4 @@ spec:
   resources:
     requests:
       storage: {{ .Values.webpack.pv.storage }}
-  storageClassName: "webpack-build-storage"
+  storageClassName: webpack-build-storage
